correction overflow

--- a/websites/conciergerie/assets/css/styles.css
+++ b/websites/conciergerie/assets/css/styles.css
@@ -69,7 +69,7 @@ body {
   flex-direction: column;
   justify-content:space-between;
   padding-top: 3rem;
-  overflow: hidden;
+  overflow-x: hidden;
  
  
 }
